# SafeAgent-Desktop

./: .env.example  .gitignore  README.md  UPLOAD_BUNDLE_INSTRUCTIONS.md  framework_integration_decision.md  multi_agent_architecture_research.md  multi_agent_research_reference_map.md  pyproject.toml
configs/: agents.json  agents.yaml  models.json  models.yaml  profiles.json  profiles.yaml
docs/: BUILD_LOG.md  BUILD_LOG_LANGGRAPH_2026-05-31.md  DEEPSEEK_PROVIDER.md  ERRORS.md  LOCAL_DELIVERY.md  LOCAL_QWEN.md  ROADMAP_STATUS.md  TROUBLESHOOTING.md  TROUBLESHOOTING_LANGGRAPH_INSTALL.md  USAGE.md  V1_HANDOFF.md
logs/: .gitkeep
scripts/: agent_chat.py  check_config_sync.py  check_error_catalog.py  check_graph_runtime.py  check_model_config.py  check_module_boundaries.py  doctor.py  probe_model_providers.py  review_config_permissions.py  run_stdlib_tests.py  show_control_token.cmd  smoke_local_flow.py  start_control_console.cmd  start_llama_server.cmd  stop_llama_server.cmd
tests/: test_agent_chat.py  test_approval.py  test_client_errors.py  test_codex_review_bridge.py  test_config_review.py  test_config_sync.py  test_diagnostics.py  test_doctor.py  test_env_file.py  test_error_catalog.py  test_executor.py  test_graph_conditions.py  test_graph_plan.py  test_graph_runner.py  test_graph_runtime.py  test_heartbeat_status.py  test_langgraph_adapter.py  test_local_provider.py  test_model_router.py  test_module_boundaries.py  test_node_handlers.py  test_orchestrator.py  test_policy.py  test_registry.py  test_remote_permissions.py  test_server_app.py  test_server_store.py  (+4 more)
(+45 files in other folders)
