[project]
name = "safeagent-workspace"
version = "0.1.0"
description = "Secure local multi-agent workspace with a remote control plane and local polling worker."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.0,<1.0.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
